--- a/config/gripper_teleoperation.yaml
+++ b/config/gripper_teleoperation.yaml
@@ -1,7 +1,7 @@
 gripper_teleoperation:
   controller_frame_id:
     type: string
-    default_value: "LHR-FF29DD46"
+    default_value: "right_hand"
     description: "Frame ID for the 3D tracking controller"
 
   joystick:
@@ -15,11 +15,11 @@ gripper_teleoperation:
       description: "Button to close the gripper for binary control (-1 to disable)"
     toggle_button:
       type: int
-      default_value: 0
+      default_value: -1
       description: "Button to toggle the gripper state for binary control (-1 to disable)"
     gripper_axis:
       type: int
-      default_value: -1
+      default_value: 0
       description: "Axis to control the gripper position for continuous control (-1 to disable)"
     invert_axis:
       type: bool
